--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sangkala XI</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.ico" type="image/png">
+    <link rel="icon" href="/favicon.ico" type="image/png">
     <meta property="og:title" content="Sangkala XI Official Website" />
     <meta property="og:description" content="Welcome to Sangkala's official website. Discover our projects and experiences!" />
 </head>
@@ -31,7 +31,7 @@
             <p>Sangkala XI is a dynamic group of creative minds from Smk Pgri 1 Denpasar, proudly representing grade XI in the Visual Communication Design (DKV) major. We are passionate about exploring the boundaries of visual storytelling, design innovation, and creative communication. Together, we collaborate, learn, and push each other to excel in the world of design, constantly striving to bring our unique perspectives to life through our work. Sangkala XI is more than just a class; it's a community of aspiring designers ready to make an impact.</p>
         </div>
         <div class="about-image">
-            <img src="img/logo.png" alt="Sangkala XI Image">
+            <img src="/img/logo.png" alt="Sangkala XI Image">
         </div>
     </section>
 
