--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>Sangkala XI</header>
     <nav id="home">
-        <a href="#">Home</a>
+        <a href="#home">Home</a>
         <a href="#about-us">About Us</a>
         <a href="#">Contact Us</a>
     </nav>
