--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <img src="/img/image8.jpg" alt="Project Image 8">
             </div>
             <div class="project-item">
-                <img src="/img/image9.png" alt="Project Image 9">
+                <img src="/img/image9.jpg" alt="Project Image 9">
             </div>
             <div class="project-item">
                 <img src="/img/image10.jpg" alt="Project Image 10">
