--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <img src="/img/image11.jpg" alt="Project Image 11">
             </div>
             <div class="project-item">
-                <img src="/img/pimage12.jpg" alt="Project Image 12">
+                <img src="/img/image12.jpg" alt="Project Image 12">
             </div>
             <div class="project-item">
                 <img src="/img/image13.jpg" alt="Project Image 13">
