--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sangkala XI</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/favicon.ico" type="image/png">
+    <link rel="icon" href="/img/favicon.png" type="image/png">
     <meta property="og:title" content="Sangkala XI Official Website" />
     <meta property="og:description" content="Welcome to Sangkala's official website. Discover our projects and experiences!" />
 </head>
